added hover effect css

--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ nav a h1{
     opacity: 1;
 }
 
+.btnStyle : hover{
+    background: #f44336
+}
+
 /* #####################################################################################
                             MediaQuery for Responsiveness
 ########################################################################################*/
