--- a/style.css
+++ b/style.css
@@ -193,8 +193,22 @@ nav a h1{
     opacity: 1;
 }
 
-.btnStyle : hover{
-    background: #f44336
+.btnStyle{
+    display:inline-block;
+    text-decoration:none;
+    color:#fff;
+    border:1px solid #fff;
+    font-size:13px;
+    position: relative;
+    padding:12px 34px;
+    cursor:pointer;
+    background:transparent;
+    border-radius:12px;
+    overflow: hidden;
+}
+
+.btnStyle:hover{
+    background-color: #f44336;
 }
 
 /* #####################################################################################
